# manual_production_order

./: .env  .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  run.py  start.bat  start_fastapi.bat  start_frontend.bat
.claude/: settings.json
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_remark_columns.py  0003_add_plants_tables.py  0004_rename_pro_type_to_plant.py  0005_drop_plants_tables.py
backend/: approval_service.py  config.py  db_auth.py  db_connection.py  mail_service.py  main.py  order_service.py  preprocess.py
backend/api/: admin.py  approval.py  auth.py  batch_orders.py  email_approval.py  main.py  management.py  orders.py  products.py  routes.py
backend/core/: config.py  constants.py  logger.py  security.py
backend/database/: auth.py  connection.py
backend/dependencies/: auth.py
backend/etl/: pipeline.py  preprocess.py
backend/output/: clean_data.csv
backend/repositories/: admin_repository.py  approval_repository.py  audit_repository.py  batch_repository.py  management_repository.py  order_repository.py  plant_repository.py  product_repository.py  sap_repository.py  user_repository.py
backend/schemas/: admin.py  batch.py  login.py  order.py  response.py
backend/scripts/: cleanup_migration.sql  create_audit_log.sql  create_batch_tables.sql  init_db.py  migrate_existing_db.sql  migrate_passwords.py  rbac_migration.sql  sap_migration.sql  schema.sql
backend/server/: api.py
backend/services/: approval_service.py  batch_service.py  mail_service.py  management_service.py  sap_service.py  (+1 more)
client/: app.py
data/: Dev Part.xlsx
docs/: DEPLOYMENT.md  GIT_WORKFLOW.md  TECHNICAL.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
tests/: conftest.py  test_login.py  test_sap_approval.py
(+23 files in other folders)
