[project]
name = "manual-production-order"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dash>=4.3.0",
    "email-validator>=2.3.0",
    "fastapi>=0.138.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
