[project]
name = "manual-production-order"
version = "2.0.0"
description = "Bull Machines — Manual Production Order Management System"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dash>=4.3.0",
    "email-validator>=2.3.0",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
