[project]
name = "manual-production-order"
version = "2.0.0"
description = "Bull Machines — Manual Production Order Management System"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.13.0",
    "dash>=4.3.0",
    "email-validator>=2.3.0",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "numpy>=2.5.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
